--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,24 @@
-.slider-title {
+body {
   font-family: 'Roboto', 'Arial', sans-serif;
+  color: #ffffff;
+  background-color: #ccc;
+}
+
+.slider-title {
   font-size: 60px;
   line-height: 60px;
   font-weight: bold;
-  color: #ffffff;
+
 }
 
 .action-title {
-  font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 35px;
   line-height: 41px;
   font-weight: bold;
-  color: #ffffff;
 }
 
 .action-description {
-  font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 18px;
   line-height: 22px;
   font-weight: bold;
-  color: #ffffff;
 }
