Закончил стилизовать header

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,156 @@
 body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 22px;
   font-family: 'Roboto', 'Arial', sans-serif;
   color: #ffffff;
-  background-color: #ccc;
+  background-color: #849d8f;
+}
+
+.container {
+  width: 880px;
+  margin: 0 auto;
+  padding: 0 10px;
+
+}
+
+
+
+.navigation-list,
+.dropdown-list{
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 18px;
+  list-style-type: none;
+}
+
+.dropdown-list {
+  background-color: #f8f7f4;
+  border-radius: 5px;
+}
+
+.navigation-link{
+  color: #ffffff;
+}
+
+.dropdown-link {
+  color: #000000;
+  text-decoration: none;
+}
+
+.new .dropdown-link {
+  font-weight: bold;
+  border-bottom: 1px solid #d1d0ce;
+}
+
+.navigation-item--current .navigation-link {
+  background-color: #d07058;
+}
+
+.navigation-link:hover,
+.navigation-link:focus {
+  color: #000000;
+  background-color: #f7f6f3;
+}
+
+.dropdown-link:hover {
+  background-color: #fbded7;
+}
+
+.dropdown-link:active {
+  background-color: #f6b5a5;
+}
+
+.search-loupe {
+  background-color: #a1b4a9;
+  border-radius: 50%;
+}
+
+.search-loupe:hover {
+  background-color: #f8f7f4;
+}
+
+.search-form {
+  background-color: #f8f7f4;
+  border-radius: 5px;
+}
+
+.search-field {
+  border: 1px solid #d3d3d2;
+  border-radius: 3px;
+}
+
+.user-block {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.user-link {
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 25%;
+  background-color: #a1b4a9;
+}
+
+.user-link:hover {
+  color: #000000;
+  background-color: #f8f7f4;
+}
+
+.form-login {
+  background-color: #f8f7f4;
+  border-radius: 5px;
+}
+
+.login-field {
+  border: 1px solid #d3d3d2;
+  border-radius: 3px;
+}
+
+.btn {
+  font-size: 18px;
+  line-height: 24px;
+  color: #ffffff;
+  background-color: #f06341;
+  border-radius: 5px;
+  border: none;
+  text-decoration: none;
+}
+
+.lost-password {
+  color: #000000;
+}
+
+.table-basket {
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+  background-color: #f8f7f4;
+  border-radius: 5px;
+}
+
+.price {
+  color: #999999;
+}
+
+.total-price {
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.work-time {
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.phone-number {
+  font-size: 22px;
+  line-height: 24px;
 }
 
 .slider-title {
