--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,10 @@ body {
 }
 
 .container {
-  width: 880px;
+  width: 1140px;
   margin: 0 auto;
   padding: 0 10px;
-
 }
-
-
 
 .navigation-list,
 .dropdown-list{
@@ -33,6 +30,7 @@ body {
 
 .navigation-link{
   color: #ffffff;
+  font-weight: bold;
 }
 
 .dropdown-link {
@@ -43,6 +41,7 @@ body {
 .new .dropdown-link {
   font-weight: bold;
   border-bottom: 1px solid #d1d0ce;
+  transition: 0.2s;
 }
 
 .navigation-item--current .navigation-link {
@@ -63,13 +62,17 @@ body {
   background-color: #f6b5a5;
 }
 
-.search-loupe {
+.search-loupe svg {
+  padding: 8px;
+  padding-bottom: 4px;
   background-color: #a1b4a9;
   border-radius: 50%;
+  transition: 0.2s;
 }
 
-.search-loupe:hover {
-  background-color: #f8f7f4;
+.search-loupe svg:hover .loupe-img {
+  background-color: #f7f7f4;
+  fill: #000000;
 }
 
 .search-form {
@@ -92,9 +95,11 @@ body {
 
 .user-link {
   color: #ffffff;
+  font-weight: 500;
   text-decoration: none;
   border-radius: 25%;
   background-color: #a1b4a9;
+  transition: 0.2s;
 }
 
 .user-link:hover {
@@ -117,9 +122,10 @@ body {
   line-height: 24px;
   color: #ffffff;
   background-color: #f06341;
-  border-radius: 5px;
+  border-radius: 10px;
   border: none;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .lost-password {
@@ -157,7 +163,6 @@ body {
   font-size: 60px;
   line-height: 60px;
   font-weight: bold;
-
 }
 
 .action-title {
@@ -166,8 +171,130 @@ body {
   font-weight: bold;
 }
 
+
 .action-description {
   font-size: 18px;
-  line-height: 22px;
   font-weight: bold;
 }
+
+.btn-big {
+  font-size: 32px;
+  line-height: 44px;
+}
+
+.products-item:hover {
+  border-radius: 5px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.fest-view {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.products-link {
+  color: #ffffff;
+}
+
+.features {
+  color: #000000;
+  background-image: url("../img/features-background.jpg");
+  background-repeat: repeat;
+  border-radius: 8px;
+}
+
+.features-title {
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.post {
+  background-image: url("../img/post-background.jpg");
+  background-repeat: repeat;
+  border-radius: 8px;
+}
+
+.post-description {
+  font-size: 24px;
+  line-height: 30px;
+  color: #000000;
+}
+
+
+.subscribe {
+  background-image: url("../img/bg-post.svg");
+}
+
+.subscribe-form {
+  background-color: #f8f7f4;
+  color: #000000;
+}
+
+.subscribe-email {
+  border:  1px solid #d3d3d2;
+  border-radius: 3px;
+}
+
+
+.contacts {
+  color: #000000;
+  background: #ffffff;
+}
+
+.contacts-title {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.contacts-adress {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.social-link {
+  width: 32px;
+  height: 30px;
+  color: #000000;
+  background-color: #e6ebe9;
+  border: 3px solid #c2cec7;
+  border-radius: 50%;
+}
+
+.Обводка {
+  background-color: rgb(255, 255, 255);
+  opacity: 0.502;
+  position: absolute;
+  left: 28px;
+  top: 2349px;
+  width: 38px;
+  height: 38px;
+  z-index: 79;
+}
+
+.about-item {
+  font-size: 13px;
+  line-height: 18px;
+}
+
+.about-link {
+  color: #ffffff;
+  text-decoration: underline #9db1a5;
+}
+
+.htmlacademy-link {
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
