--- a/css/style.css
+++ b/css/style.css
@@ -413,19 +413,24 @@ body {
 }
 
 .paginator-list {
+  display: flex;
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
 .paginator-link {
-  display: block;
+  display: inline-block;
+  vertical-align: middle;
   padding: 6px 8px;
   color: #000000;
-  text-align: center;
-  background-color: #ffffff;
   border-radius: 50%;
   text-decoration: none;
+}
+
+.paginator-item--current .paginator-link {
+  color: #000000;
+  background-color: #ffffff;
 }
 
 .paginator-link:hover {
