--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
   box-sizing: inherit;
 }
 
-
 body {
   margin: 0;
   padding: 0;
@@ -45,11 +44,26 @@ img {
 
 .dropdown-list {
   display: none;
+  position: absolute;
+  top: 70px;
+  width: 145px;
+  padding-bottom: 2px;
   background-color: #f8f7f4;
   border-radius: 5px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.navigation-list > li:hover .dropdown-list {
+  z-index: 1;
+  display: block;
+}
+
+.dropdown-item-current .dropdown-link {
+  background-color: #d07058;
 }
 
 .navigation-link{
+  position: relative;
   display: block;
   padding: 10px 14px;
   border-radius: 15px;
@@ -63,6 +77,9 @@ img {
 }
 
 .dropdown-link {
+  display: block;
+  padding: 7px 0;
+  padding-left: 20px;
   color: #000000;
   text-decoration: none;
 }
@@ -83,6 +100,11 @@ img {
   background-color: #f7f6f3;
 }
 
+.navigation-link:active {
+  background-color: #ededed;
+  box-shadow: inset 1px 3px 1px 0px #696969;
+}
+
 .dropdown-link:hover {
   background-color: #fbded7;
 }
@@ -91,7 +113,12 @@ img {
   background-color: #f6b5a5;
 }
 
+.header-search {
+  position: relative;
+}
+
 .search-loupe svg {
+  margin-top: 3px;
   padding: 8px;
   padding-bottom: 4px;
   background-color: #a1b4a9;
@@ -99,19 +126,71 @@ img {
   transition: 0.2s;
 }
 
-.search-loupe svg:hover .loupe-img {
-  background-color: #f7f7f4;
+.search-loupe svg:hover {
+  background-color: #f8f7f4;
+}
+
+.search-loupe svg:hover path {
   fill: #000000;
 }
 
-.search-form {
+.search-form{
+  display: none;
+  position: absolute;
+  left: -200px;
+  top: 41px;
+  padding: 20px 15px;
   background-color: #f8f7f4;
+  border-radius: 3px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.input-custom {
+  padding: 10px 15px;
+  color: #323232;
+  text-transform: capitalize;
+  border: 1px solid #d3d3d2;
   border-radius: 5px;
 }
 
-.search-field {
-  border: 1px solid #d3d3d2;
-  border-radius: 3px;
+.input-custom:hover {
+  border-color: #e6e5e3;
+}
+
+.input-custom:focus {
+  border-color: #cfe1f3;
+}
+
+.header-search:hover .search-form {
+  display: block;
+}
+
+.user-block-login {
+  position: relative;
+}
+
+.form-login {
+  display: none;
+  position: absolute;
+  top: 44px;
+  left: -187px;
+  padding: 20px;
+  width: 290px;
+  box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.user-block-login:hover .form-login {
+  display: block;
+}
+
+.login-field {
+  width: 240px;
+  margin-bottom: 20px;
+}
+
+.login-text {
+  margin: 0;
+  padding: 0;
 }
 
 .user-block {
@@ -123,35 +202,65 @@ img {
 }
 
 .user-link {
+  display: block;
   position: relative;
   padding: 8px 16px;
-  padding-left: 30px;
+  padding-left: 44px;
   color: #ffffff;
   font-weight: 500;
   text-decoration: none;
-  border-radius: 25%;
+  border-radius: 15px;
   background-color: #a1b4a9;
   transition: 0.2s;
 }
 
-.icon-login::before {
+.icon-login {
+  position: relative;
+}
+
+.svg-icon-login {
+  position: absolute;
+  left: 16px;
+  top: 8px;
+}
+
+.svg-icon-login path {
+  fill: #ffffff;
+}
+
+.svg-icon-login:hover path {
+  fill: #000000;
+}
+
+.user-block-basket {
+  position: relative;
+}
+
+.icon-basket::before {
   content: "";
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 49px;
-  height: 49px;
-  background-image: url("../img/entrance.svg");
+  left: 16px;
+  top: 8px;
+  width: 21px;
+  height: 20px;
+  background-image: url("../img/basket.svg");
+  background-repeat: no-repeat;
+}
+
+.icon-basket:hover::before {
+  content: "";
+  position: absolute;
+  left: 16px;
+  top: 8px;
+  width: 21px;
+  height: 20px;
+  background-image: url("../img/basket-red.svg");
   background-repeat: no-repeat;
 }
 
 .icon-basket-active {
   color: #000000;
   background-color: #f7f6f3;
-}
-
-.table-basket {
-  display: none;
 }
 
 .user-link:hover {
@@ -170,6 +279,8 @@ img {
 }
 
 .btn {
+  display: inline-block;
+  padding: 10px 20px;
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
@@ -178,7 +289,7 @@ img {
   background-image: -ms-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
   background-image: linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
   box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
-  border-radius: 10px;
+  border-radius: 15px;
   border: none;
   text-decoration: none;
   cursor: pointer;
@@ -203,6 +314,7 @@ img {
 
 .lost-password {
   color: #000000;
+  text-decoration: underline #e9e8e5;
 }
 
 .table-basket {
@@ -237,6 +349,11 @@ img {
   line-height: 60px;
 }
 
+.btn-big {
+  font-size: 32px;
+  line-height: 44px;
+}
+
 .raspberry-bg {
   background-image: url("../img/raspberry-bg.jpg");
   background-repeat: no-repeat;
@@ -254,23 +371,31 @@ img {
 }
 
 .action-item {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
   border-radius: 5px;
 }
 
 .action-title {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
   font-size: 35px;
   line-height: 41px;
   font-weight: bold;
 }
 
 .action-description {
+  margin: 0;
+  margin-bottom: 50px;
+  padding: 0;
   font-size: 18px;
   font-weight: bold;
 }
 
-.btn-big {
-  font-size: 32px;
-  line-height: 44px;
+.btn-right {
+  text-align: right;
 }
 
 .products {
@@ -279,7 +404,50 @@ img {
 
 .products-item {
   position: relative;
+  padding: 9px 13px;
   transition: 0.2s;
+}
+
+.products-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 61px;
+  height: 61px;
+  background-image: url("../img/hit.svg");
+  background-repeat: no-repeat;
+}
+
+.price-products {
+  position: absolute;
+  left: 0;
+  bottom: 176px;
+  margin: 0;
+  padding: 0;
+}
+
+.products-kg {
+  position: relative;
+  padding-right: 40px;
+  font-size: 45px;
+  line-height: 45px;
+  font-weight: bold;
+}
+
+.products-kg::after {
+  content: "";
+  position: absolute;
+  top: 9px;
+  right: 20px;
+  width: 30px;
+  height: 35px;
+  background-image: url("../img/ruble.svg");
+  background-repeat: no-repeat;
+}
+
+.action-item .btn {
+  align-self: flex-end;
 }
 
 .fest-view {
@@ -295,7 +463,7 @@ img {
 }
 
 .products-item:hover .fest-view {
-  display: block;
+
 }
 
 .fest-view {
@@ -317,6 +485,40 @@ img {
   border-radius: 8px;
 }
 
+.features-item {
+  position: relative;
+  padding-left: 60px;
+}
+
+.features-item::before {
+  content: "";
+  position: absolute;
+  top: -9px;
+  left: 0;
+  width: 49px;
+  height: 49px;
+  background-image: url("../img/ice-cream.svg");
+  background-repeat: no-repeat;
+}
+
+.icon-cow::before {
+  content: "";
+  background-image: url("../img/cow.svg");
+  background-repeat: no-repeat;
+}
+
+.icon-eco::before {
+  content: "";
+  background-image: url("../img/eco.svg");
+  background-repeat: no-repeat;
+}
+
+.icon-thermometer::before {
+  content: "";
+  background-image: url("../img/thermometer.svg");
+  background-repeat: no-repeat;
+}
+
 .features-title {
   font-size: 24px;
   line-height: 30px;
@@ -324,6 +526,8 @@ img {
 
 .post {
   min-height: 220px;
+  margin-top: 16px;
+  padding: 25px 20px;
   background-image: url("../img/post-bg.png");
   background-repeat: repeat;
   background-size: cover;
@@ -331,6 +535,9 @@ img {
 }
 
 .post-new {
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 0;
   color: #000000;
 }
 
@@ -356,7 +563,14 @@ img {
   border-radius: 10px;
 }
 
+.subscribe-description {
+  margin: 0;
+  margin-bottom: 35px;
+  padding: 0;
+}
+
 .subscribe-email {
+
   border:  1px solid #d3d3d2;
   border-radius: 3px;
 }
@@ -555,28 +769,21 @@ img {
 .row {
   display: flex;
   margin: 0;
+
   padding: 0;
   list-style-type: none;
-}
-
-.user-row {
-  margin: 0 -5px;
 }
 
 .row li {
   padding: 0 5px;
 }
 
+.user-row {
+  margin: 0 -5px;
+}
+
 .user-left {
   margin-left: auto;
-}
-
-.search-form {
-  display: none;
-}
-
-.form-login {
-  display: none;
 }
 
 .navigation-list {
@@ -592,6 +799,15 @@ img {
 
 .ml-auto {
   margin-left: auto;
+}
+
+.user-form-row {
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.user-form-row li {
+  padding: 0;
 }
 
 .action-row {
@@ -620,17 +836,27 @@ img {
 .features-row li {
   width: 50%;
   padding: 0 13px;
-  padding-left: 60px;
 }
 
 .row-post {
   margin: 0 -13px;
   margin-bottom: 40px;
+  align-items: center;
 }
 
 .row-post li {
   width: 50%;
   padding: 0 13px;
+}
+
+.subscribe-row {
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 -5px;
+}
+
+.subscribe-row li {
+  padding: 0;
 }
 
 .footer-row {
