--- a/css/style.css
+++ b/css/style.css
@@ -404,26 +404,15 @@ img {
 
 .products-item {
   position: relative;
+  min-height: 410px;
   padding: 9px 13px;
+  text-align: center;
   transition: 0.2s;
 }
 
-.products-item::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 61px;
-  height: 61px;
-  background-image: url("../img/hit.svg");
-  background-repeat: no-repeat;
-}
-
 .price-products {
-  position: absolute;
-  left: 0;
-  bottom: 176px;
   margin: 0;
+  margin-bottom: -60px;
   padding: 0;
 }
 
@@ -446,15 +435,21 @@ img {
   background-repeat: no-repeat;
 }
 
+.products-link {
+  display: block;
+  padding-bottom: 20px;
+}
+
 .action-item .btn {
   align-self: flex-end;
 }
 
 .fest-view {
+  width: 220px;
   display: none;
   position: absolute;
-  left: 100px;
-  bottom: 60px;
+  left: 23px;
+  bottom: 20px;
 }
 
 .products-item:hover {
@@ -463,7 +458,7 @@ img {
 }
 
 .products-item:hover .fest-view {
-
+  display: block;
 }
 
 .fest-view {
@@ -570,7 +565,7 @@ img {
 }
 
 .subscribe-email {
-
+  width: 100%;
   border:  1px solid #d3d3d2;
   border-radius: 3px;
 }
@@ -613,12 +608,42 @@ img {
 }
 
 .social-link {
-  width: 32px;
-  height: 30px;
-  color: #000000;
+  display: inline-block;
+  width: 38px;
+  height: 38px;
+  color: #e6ebe9;
   background-color: #e6ebe9;
   border: 3px solid #c2cec7;
   border-radius: 50%;
+}
+
+.social-link-tw {
+  background-image: url("../img/twitter.svg");
+  background-repeat: no-repeat;
+}
+
+.social-link-inst {
+  background-image: url("../img/instagram.svg");
+  background-repeat: no-repeat;
+}
+
+.social-link-fb {
+  background-image: url("../img/fb.svg");
+  background-repeat: no-repeat;
+}
+
+.social-link-vk {
+  background-image: url("../img/vk.svg");
+  background-repeat: no-repeat;
+}
+
+.social-link:hover {
+  background-color: #fdfdfd;
+}
+
+.social-link:active {
+  background-color: #e9e9e9;
+  border-color: #c6d1cb;
 }
 
 .about-list {
@@ -844,7 +869,7 @@ img {
   align-items: center;
 }
 
-.row-post li {
+.row-post > li {
   width: 50%;
   padding: 0 13px;
 }
@@ -852,18 +877,27 @@ img {
 .subscribe-row {
   justify-content: space-between;
   align-items: center;
-  margin: 0 -5px;
+  margin: 0 -7px;
 }
 
 .subscribe-row li {
-  padding: 0;
+  padding: 0 7px;
+}
+
+.subscribe-grow {
+  flex-grow: 1;
+}
+
+.about-list {
+  display: inline-flex;
+  text-align: center;
+  flex-wrap: wrap;
 }
 
 .footer-row {
   align-items: center;
   justify-content: space-between;
 }
-
 
 .products-row--wrap {
   flex-wrap: wrap;
