--- a/css/style.css
+++ b/css/style.css
@@ -410,6 +410,17 @@ img {
   transition: 0.2s;
 }
 
+.products-item:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 61px;
+  height: 61px;
+  background-image: url("../img/hit.svg");
+  background-repeat: no-repeat;
+}
+
 .price-products {
   margin: 0;
   margin-top: -60px;
