--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ body {
   box-sizing: border-box;
 }
 
+.display-none {
+  display: none;
+}
+
+a {
+  transition: all 0.2s;
+}
+
 .container {
   width: 1140px;
   margin: 0 auto;
@@ -25,12 +33,42 @@ img {
   height: auto;
 }
 
+body > input[type="radio"] {
+  display: none;
+}
+
+.site-wrapper {
+  min-width: 1140px;
+  background-color: #849d8f;
+  background-repeat: no-repeat;
+  background-position: top center;
+  transition: all 0.5s ease;
+}
+.site-wrapper::before,
+.site-wrapper::after {
+  content: "";
+  visibility: hidden;
+}
+
+.site-wrapper:before,
+.site-wrapper::after {
+  background-image: url("../img/slide-1.png");
+}
+
+.site-wrapper::after {
+  background-image: url("../img/slide-2.png");
+}
+
 .main-header {
   padding-top: 10px;
 }
 
 .header-logo {
-  margin-right: 20px;
+  margin-right: -5px;
+}
+
+.main-navigation {
+  margin-bottom: 10px;
 }
 
 .navigation-list,
@@ -42,11 +80,15 @@ img {
   list-style-type: none;
 }
 
+.navigation-active {
+  position: relative;
+}
+
 .dropdown-list {
   display: none;
   position: absolute;
-  top: 70px;
-  width: 145px;
+  top: 45px;
+  width: 148px;
   padding-bottom: 2px;
   background-color: #f8f7f4;
   border-radius: 5px;
@@ -62,8 +104,16 @@ img {
   background-color: #d07058;
 }
 
-.navigation-link{
+.navigation-active::after {
   position: relative;
+  top: 0;
+  left: 0;
+  height: 5px;
+  width: 150px;
+  background-color: transparent;
+}
+
+.navigation-link{
   display: block;
   padding: 10px 14px;
   border-radius: 15px;
@@ -107,6 +157,12 @@ img {
 
 .dropdown-link:hover {
   background-color: #fbded7;
+}
+
+.link-custom:hover,
+.link-custom:active {
+  color: #ffbc9e;
+  text-decoration: underline #8b9e90;
 }
 
 .dropdown-link:active {
@@ -201,7 +257,8 @@ img {
   line-height: 16px;
 }
 
-.user-link {
+.icon-login,
+.icon-basket{
   display: block;
   position: relative;
   padding: 8px 16px;
@@ -247,23 +304,12 @@ img {
   background-repeat: no-repeat;
 }
 
-.icon-basket:hover::before {
-  content: "";
-  position: absolute;
-  left: 16px;
-  top: 8px;
-  width: 21px;
-  height: 20px;
-  background-image: url("../img/basket-red.svg");
-  background-repeat: no-repeat;
-}
-
 .icon-basket-active {
   color: #000000;
   background-color: #f7f6f3;
 }
 
-.user-link:hover {
+.icon-login:hover {
   color: #000000;
   background-color: #f8f7f4;
 }
@@ -284,12 +330,12 @@ img {
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
-  background-image: -moz-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: -webkit-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: -ms-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
-  border-radius: 15px;
+  background-color: #f26743;
+  background-image: -moz-linear-gradient(top, #f26743 0%, #e74035 100%);
+  background-image:  -webkit-linear-gradient(top, #f26743 0%, #e74035 100%);
+  background-image:  linear-gradient(to bottom, #f26743 0%, #e74035 100%);
+  box-shadow: 0 2px 2px rgba(172,16,0,0.64);
+  border-radius: 100px;
   border: none;
   text-decoration: none;
   cursor: pointer;
@@ -297,19 +343,18 @@ img {
 }
 
 .btn:hover {
-  background-image: -moz-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: -webkit-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: -ms-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.004);
+  background-image: -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background-image: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background-image: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172,16,0,0.1);
 }
 
+
 .btn:active {
-  background-image: -moz-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-  background-image: -webkit-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-  background-image: -ms-linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-  background-image: linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
-  box-shadow: inset 0px 2px 2px 0px rgba(148, 39, 24, 0.004);
+  background-image: -moz-linear-gradient(top, #e74a35 0%, #f26843 100%);
+  background-image: -webkit-linear-gradient(top, #e74a35 0%, #f26843 100%);
+  background-image: linear-gradient(to bottom, #e74a35 0%, #f26843 100%);
+  box-shadow: inset 0 2px 2px rgba(148,39,24,0.1);
 }
 
 .lost-password {
@@ -335,23 +380,98 @@ img {
 }
 
 .work-time {
+  margin: 0;
+  margin-bottom: 5px;
+  padding: 0;
   font-size: 14px;
   line-height: 16px;
 }
 
 .phone-number {
+  margin: 0;
+  padding: 0;
   font-size: 22px;
   line-height: 24px;
 }
 
+.slider {
+  position: relative;
+  margin-bottom: 40px;
+  padding-top: 276px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.slide {
+  display: none;
+}
+
 .slider-title {
+  width: 700px;
+  margin: 0 auto;
+  margin-bottom: 27px;
   font-size: 60px;
   line-height: 60px;
+  font-weight: bold;
 }
 
 .btn-big {
-  font-size: 32px;
-  line-height: 44px;
+  padding: 12px 50px;
+  font-weight: bold;
+  font-size: 31px;
+  line-height: 41px;
+  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 25px;
+  left: 0;
+  z-index: 10;
+  font-size: 0;
+}
+
+#btn-1:checked ~ .site-wrapper #slide-1,
+#btn-2:checked ~ .site-wrapper #slide-2,
+#btn-3:checked ~ .site-wrapper #slide-3 {
+  display: block;
+}
+
+#btn-1:checked ~ .site-wrapper label[for="btn-1"],
+#btn-2:checked ~ .site-wrapper label[for="btn-2"],
+#btn-3:checked ~ .site-wrapper label[for="btn-3"]{
+  background-color: #ffffff;
+}
+
+#btn-1:checked ~ .site-wrapper {
+  background-color: #849d8f;
+  background-image: url("../img/slide-1.png");
+}
+
+#btn-2:checked ~ .site-wrapper {
+  background-color: #8996a6;
+  background-image: url("../img/slide-2.png");
+}
+
+#btn-3:checked ~ .site-wrapper {
+  background-color: #9d8b84;
+  background-image: url("../img/slide-3.png");
+}
+
+.slider-controls label {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+  vertical-align: top;
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-controls label:hover {
+  background-color: rgba(248, 247, 244,0.4);
 }
 
 .raspberry-bg {
@@ -374,7 +494,7 @@ img {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 20px;
 }
 
 .action-title {
@@ -681,6 +801,7 @@ img {
   font-size: 12px;
   line-height: 18px;
   color: #ffffff;
+  text-decoration: none;
 }
 
 .footer-logo img {
@@ -818,8 +939,17 @@ img {
   padding: 0 5px;
 }
 
+.dropdown-list li {
+  padding: 0;
+}
+
 .user-row {
-  margin: 0 -5px;
+  margin: 0 -44px;
+}
+
+.user-row li {
+  padding: 0 5px;
+  margin-top: -11px;
 }
 
 .user-left {
@@ -839,6 +969,7 @@ img {
 
 .ml-auto {
   margin-left: auto;
+  margin-top: -7px;
 }
 
 .user-form-row {
