--- a/css/style.css
+++ b/css/style.css
@@ -87,12 +87,22 @@ body > input[type="radio"] {
 .dropdown-list {
   display: none;
   position: absolute;
-  top: 41px;
+  top: 66px;
   width: 148px;
   padding-bottom: 2px;
   background-color: #f8f7f4;
   border-radius: 5px;
   box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+}
+
+.dropdown-list::before {
+  content: "";
+  position: absolute;
+  top: -17px;
+  left: 0;
+  width: 100%;
+  height: 17px;
+  background-color: transparent;
 }
 
 .navigation-list > li:hover .dropdown-list {
@@ -797,7 +807,7 @@ body > input[type="radio"] {
   width: 38px;
   height: 38px;
   color: #e6ebe9;
-  background-color: #e6ebe9;
+  background-color: #dbe2df;
   border: 3px solid #c2cec7;
   border-radius: 50%;
 }
@@ -823,7 +833,7 @@ body > input[type="radio"] {
 }
 
 .social-link:hover {
-  background-color: #f6f8f7;
+  background-color: #cad5cf;
 }
 
 .social-link:active {
