--- a/css/style.css
+++ b/css/style.css
@@ -80,14 +80,14 @@ body > input[type="radio"] {
   list-style-type: none;
 }
 
-.navigation-active {
+.navigation-dropdown-active {
   position: relative;
 }
 
 .dropdown-list {
   display: none;
   position: absolute;
-  top: 66px;
+  top: calc(100% + 10px);
   width: 148px;
   padding-bottom: 2px;
   background-color: #f8f7f4;
@@ -196,6 +196,8 @@ body > input[type="radio"] {
   transition: 0.2s;
 }
 
+
+
 .search-loupe svg:hover {
   background-color: #f8f7f4;
 }
@@ -215,20 +217,27 @@ body > input[type="radio"] {
   box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
+.group {
+  position: relative;
+}
+
 .input-custom {
+  margin-bottom: 20px;
   padding: 10px 15px;
   color: #323232;
   text-transform: capitalize;
   border: 1px solid #d3d3d2;
   border-radius: 5px;
+  transition: all 0.2s;
+}
+
+.input-custom:focus .search-text {
+  display: block;
+  border-color: #cfe1f3;
 }
 
 .input-custom:hover {
   border-color: #e6e5e3;
-}
-
-.input-custom:focus {
-  border-color: #cfe1f3;
 }
 
 .header-search:hover .search-form {
@@ -924,6 +933,7 @@ body > input[type="radio"] {
 
 .filter-item {
   margin-top: -15px;
+  margin-bottom: 15px;
 }
 
 .filter-form {
@@ -940,15 +950,78 @@ body > input[type="radio"] {
 }
 
 .filter-shadow {
-  padding: 10px 15px;
+  padding: 12px 15px;
   background-color: #aabab0;
   border-radius: 100px;
+}
+
+.filter-shadow .custom-radio,
+.filter-shadow .custom-checkbox{
+  display: none;
+}
+
+.filter-radio-text .custom-radio + .indicator-radio {
+  position: absolute;
+  top: -2px;
+  left: 4px;
+  width: 22px;
+  height: 22px;
+  border: 4px solid #ffffff;
+  border-radius: 50%;
+}
+
+.indicator-radio {
+  position: relative;
+}
+
+.filter-radio-text .custom-radio:checked + .indicator-radio::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 8px;
+  height: 8px;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+
+.filter-checkbox-text {
+  position: relative;
+}
+
+.filter-checkbox-text .custom-checkbox + .indicator-checkbox {
+  position: absolute;
+  top: 0;
+  left: 1px;
+  width: 24px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 3px;
+}
+
+.indicator-checkbox {
+  position: relative;
+}
+
+.filter-checkbox-text .custom-checkbox:checked + .indicator-checkbox::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -1px;
+  width: 24px;
+  height: 20px;
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
 }
 
 .filter-field {
   line-height: 18px;
   color: #ffffff;
   background-color: #9db1a5;
+}
+
+.filter-field {
+  border: none;
 }
 
 .filter-field-hover:hover {
@@ -958,16 +1031,23 @@ body > input[type="radio"] {
 
 .filter-radio-text,
 .filter-checkbox-text{
+  padding-left: 33px;
+  padding-right: 16px;
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
 }
 
+.filter-radio-text {
+  position: relative;
+}
+
 .filter-submit{
+  font: inherit;
   display: inline-block;
   vertical-align: top;
-  margin-top: 17px;
-  padding: 10px 27px;
+  margin-top: 11px;
+  padding: 10px 20px;
   color: #ffffff;
   background-color: #a6b7ae;
   border: 2px solid #ffffff;
@@ -1180,7 +1260,7 @@ body > input[type="radio"] {
 }
 
 .filter-row {
-  width: 71%;
+  width: 76%;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
@@ -1191,6 +1271,8 @@ body > input[type="radio"] {
   padding: 0;
   margin-bottom: 15px;
 }
+
+
 
 
 
