--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
 }
 
 .container {
-  width: 1140px;
+  width: 1170px;
   margin: 0 auto;
   padding: 0 10px;
 }
@@ -60,6 +60,7 @@ body > input[type="radio"] {
 }
 
 .main-header {
+  z-index: 10;
   padding-top: 10px;
 }
 
@@ -129,7 +130,7 @@ body > input[type="radio"] {
 
 .navigation-link{
   display: block;
-  padding: 10px 14px;
+  padding: 10px;
   border-radius: 15px;
   color: #ffffff;
   font-weight: bold;
@@ -196,8 +197,6 @@ body > input[type="radio"] {
   transition: 0.2s;
 }
 
-
-
 .search-loupe svg:hover {
   background-color: #f8f7f4;
 }
@@ -217,12 +216,7 @@ body > input[type="radio"] {
   box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
-.group {
-  position: relative;
-}
-
 .input-custom {
-  margin-bottom: 20px;
   padding: 10px 15px;
   color: #323232;
   text-transform: capitalize;
@@ -249,6 +243,7 @@ body > input[type="radio"] {
 }
 
 .form-login {
+  z-index: 2;
   display: none;
   position: absolute;
   top: 44px;
@@ -263,8 +258,17 @@ body > input[type="radio"] {
 }
 
 .login-field {
+  position: relative;
   width: 240px;
   margin-bottom: 20px;
+}
+
+.login-field::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  background-color: red;
 }
 
 .login-text {
@@ -300,8 +304,8 @@ body > input[type="radio"] {
 
 .svg-icon-login {
   position: absolute;
-  left: 16px;
-  top: 8px;
+  left: 21px;
+  top: 10px;
 }
 
 .svg-icon-login path {
@@ -323,8 +327,8 @@ body > input[type="radio"] {
 .icon-basket::before {
   content: "";
   position: absolute;
-  left: 16px;
-  top: 8px;
+  left: 6px;
+  top: 11px;
   width: 21px;
   height: 20px;
   background-image: url("../img/basket.svg");
@@ -391,10 +395,8 @@ body > input[type="radio"] {
 .btn:hover {
   background-image: -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background-image: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
-  background-image: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
-  box-shadow: 0 2px 2px 0 rgba(172,16,0,0.1);
+  background-image: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);;
 }
-
 
 .btn:active {
   background-image: -moz-linear-gradient(top, #e74a35 0%, #f26843 100%);
@@ -484,8 +486,8 @@ body > input[type="radio"] {
 
 .slider-controls {
   position: absolute;
-  bottom: 25px;
-  left: 0;
+  bottom: 20px;
+  left: 4px;
   z-index: 10;
   font-size: 0;
 }
@@ -519,8 +521,8 @@ body > input[type="radio"] {
 
 .slider-controls label {
   display: inline-block;
-  width: 17px;
-  height: 17px;
+  width: 21px;
+  height: 21px;
   margin-right: 8px;
   vertical-align: top;
   background-color: transparent;
@@ -574,7 +576,7 @@ body > input[type="radio"] {
 }
 
 .products {
-  margin-bottom: -46px;
+  margin-bottom: -47px;
 }
 
 .products-item {
@@ -588,8 +590,8 @@ body > input[type="radio"] {
 .products-item:before {
   content: "";
   position: absolute;
-  top: 3px;
-  left: 26px;
+  top: -1px;
+  left: 10px;
   width: 61px;
   height: 61px;
   background-image: url("../img/hit.svg");
@@ -603,8 +605,8 @@ body > input[type="radio"] {
 
 .price-products {
   margin: 0;
-  margin-top: -52px;
-  margin-left: -85px;
+  margin-top: -63px;
+  margin-left: -113px;
   padding: 0;
   font-size: 30px;
   line-height: 35px;
@@ -628,6 +630,13 @@ body > input[type="radio"] {
   height: 35px;
   background-image: url("../img/ruble.svg");
   background-repeat: no-repeat;
+}
+
+.products-description {
+  margin: 0;
+  margin-top: 25px;
+  padding: 0;
+  text-align: center;
 }
 
 .products-link {
@@ -667,25 +676,26 @@ body > input[type="radio"] {
 
 .features {
   width: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 22px;
   padding: 25px 20px;
   color: #000000;
   background-image: url("../img/features-background.jpg");
   background-repeat: repeat;
-  border-radius: 8px;
+  border-radius: 14px;
 }
 
 .features-item {
   position: relative;
-  margin-bottom: -31px;
+  margin-top: 23px;
+  margin-bottom: -2px;
   padding-left: 60px;
 }
 
 .features-item::before {
   content: "";
   position: absolute;
-  top: -9px;
-  left: 0;
+  top: -14px;
+  left: 3px;
   width: 49px;
   height: 49px;
   background-image: url("../img/ice-cream.svg");
@@ -715,6 +725,11 @@ body > input[type="radio"] {
   line-height: 30px;
 }
 
+.features-description {
+  margin: 0;
+  padding: 0;
+}
+
 .post {
   min-height: 220px;
   margin-top: 16px;
@@ -727,15 +742,20 @@ body > input[type="radio"] {
 
 .post-new {
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
   padding: 0;
   color: #000000;
 }
 
 .post-description {
+  font-weight: bold;
   font-size: 24px;
   line-height: 30px;
   color: #000000;
+}
+
+.post-description:hover {
+  color: #e84d37;
 }
 
 .subscribe {
@@ -781,9 +801,9 @@ body > input[type="radio"] {
 
 .contacts {
   position: absolute;
-  width: 293px;
-  top: 48px;
-  right: -18px;
+  width: 301px;
+  top: 61px;
+  right: 10px;
   padding: 25px 20px;
   color: #000000;
   background: #ffffff;
@@ -792,7 +812,7 @@ body > input[type="radio"] {
 
 .contacts-title {
   margin: 0;
-  margin-bottom: 19px;
+  margin-bottom: 20px;
   padding: 0;
   font-size: 14px;
   line-height: 20px;
@@ -803,11 +823,23 @@ body > input[type="radio"] {
   line-height: 24px;
 }
 
+.order-telefone {
+  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 0;
+}
+
+.btn-recall {
+  width: 255px;
+}
+
 .main-footer {
-  padding: 35px 0;
+  padding: 23px 25px;
 }
 
 .social {
+  margin-top: 20px;
   font-size: 0;
 }
 
@@ -815,6 +847,7 @@ body > input[type="radio"] {
   display: inline-block;
   width: 38px;
   height: 38px;
+  margin-right: 12px;
   color: #e6ebe9;
   background-color: #dbe2df;
   border: 3px solid #c2cec7;
@@ -850,6 +883,27 @@ body > input[type="radio"] {
   border-color: #c6d1cb;
 }
 
+.about {
+  margin-top: 18px;
+  margin-left: -20px;
+}
+
+.about-item.about-item-iconed {
+  position: relative;
+  padding-left: -4px;
+}
+
+.about-item-iconed::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: -10px;
+  width: 15px;
+  height: 13px;
+  background-image: url("../img/heart.svg");
+  background-repeat: no-repeat;
+}
+
 .about-list {
   padding: 0;
   list-style-type: none;
@@ -862,10 +916,15 @@ body > input[type="radio"] {
 
 .about-link {
   display: inline-block;
-  padding-right: 32px;
+  padding-left: 8px;
+  padding-right: 22px;
   padding-bottom: 8px;
   color: #ffffff;
   text-decoration: underline #9db1a5;
+}
+
+.about-link:last-child {
+  padding-right: 0;
 }
 
 .main-footer {
@@ -877,6 +936,10 @@ body > input[type="radio"] {
   line-height: 18px;
   color: #ffffff;
   text-decoration: none;
+}
+
+.footer-logo {
+  margin-left: 6px;
 }
 
 .footer-logo img {
@@ -1159,7 +1222,7 @@ body > input[type="radio"] {
 }
 
 .user-row {
-  margin: 0 -44px;
+  margin: 0 -11px;
 }
 
 .user-row li {
@@ -1198,7 +1261,7 @@ body > input[type="radio"] {
 
 .action-row {
   justify-content: space-between;
-  margin: 0 -13px;
+  margin: 0 -9px;
 }
 
 .action-row li {
