--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,10 @@ body > input[type="radio"] {
   position: relative;
 }
 
+.delete:hover {
+  opacity: 0.5;
+}
+
 .delete::before,
 .delete::after {
   content: "";
@@ -1087,6 +1091,7 @@ body > input[type="radio"] {
   height: 20px;
   background-image: url("../img/filter-button.svg");
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 .filter-range-right {
   position: absolute;
@@ -1117,8 +1122,12 @@ body > input[type="radio"] {
   left: 4px;
   width: 22px;
   height: 22px;
-  border: 4px solid #ffffff;
+  border: 4px solid #bac8c0;
   border-radius: 50%;
+}
+
+.filter-radio-text .custom-radio + .indicator-radio:hover {
+  border-color: #ffffff;
 }
 
 .indicator-radio {
@@ -1146,12 +1155,19 @@ body > input[type="radio"] {
   left: 7px;
   width: 24px;
   height: 20px;
-  border: 2px solid #ffffff;
+  border: 2px solid #bac8c0;
   border-radius: 3px;
+}
+
+.filter-checkbox-text .custom-checkbox + .indicator-checkbox:hover {
+  border-color: #ffffff;
 }
 
 .indicator-checkbox {
   position: relative;
+}
+
+.indicator-checkbox:hover {
 }
 
 .filter-checkbox-text .custom-checkbox:checked + .indicator-checkbox::before {
@@ -1181,20 +1197,20 @@ body > input[type="radio"] {
 }
 
 .filter-radio-width {
-  width: 415px;
+  width: 419px;
 }
 
 .filter-radio-text,
 .filter-checkbox-text{
   padding-left: 33px;
-  padding-right: 14px;
+  padding-right: 11px;
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
 }
 
 .filter-checkbox-text {
-  padding-right: 17px;
+  padding-right: 18px;
 }
 
 .filter-radio-text:last-child {
@@ -1210,7 +1226,7 @@ body > input[type="radio"] {
   display: inline-block;
   vertical-align: top;
   margin-top: 11px;
-  padding: 7px 22px;
+  padding: 7px 27px;
   color: #ffffff;
   background-color: #a6b7ae;
   border: 2px solid #ffffff;
@@ -1435,7 +1451,7 @@ body > input[type="radio"] {
 }
 
 .filter-row {
-  width: 75%;
+  width: 76%;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
@@ -1457,20 +1473,25 @@ body > input[type="radio"] {
 
 .modal-content {
   position: fixed;
-  top: 38%;
+  top: 37%;
   left: 50%;
-  width: 478px;
-  margin-left: -239px;
-  padding: 20px 24px;
+  display: none;
+  width: 485px;
+  margin-left: -236px;
+  padding: 16px 30px;
   color: #000000;
   background-color: #f8f7f4;
   border-radius: 10px;
   box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
+.modal-show {
+  display: block;
+}
+
 .modal-content-close {
   position: absolute;
-  top: 16px;
+  top: 10px;
   right: 19px;
   width: 18px;
   height: 18px;
@@ -1478,6 +1499,10 @@ body > input[type="radio"] {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.modal-content-close:hover {
+  opacity: 0.5;
 }
 
 .modal-content-close::before,
@@ -1514,22 +1539,29 @@ body > input[type="radio"] {
   margin-bottom: 20px;
   font-size: 24px;
   line-height: 28px;
+  color: #323232;
 }
 
 .feedback-description {
-  min-height: 155px;
+  min-height: 167px;
   margin-bottom: 20px;
-  padding: 10px 15px;
+  padding: 20px 15px;
   color: #323232;
   text-transform: capitalize;
   border: 1px solid #d3d3d2;
   border-radius: 5px;
   resize: none;
+  overflow: hidden;
 
 }
 
-.btn-right {
+.feedback-description:hover {
+  border-color: #e6e5e3;
+}
+
+.btn-feedback {
   width: 140px;
+  margin-bottom: 10px;
   align-self: flex-end;
 }
 
