--- a/css/style.css
+++ b/css/style.css
@@ -845,22 +845,15 @@ body > input[type="radio"] {
   border-radius: 3px;
 }
 
-.maps {
-  min-height: 430px;
-  background-image: url("../img/maps.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
 .maps .container{
   position: relative;
 }
 
 .contacts {
+  z-index: 10;
   position: absolute;
   width: 301px;
-  top: 61px;
+  bottom: 75px;
   right: 10px;
   padding: 26px 20px;
   color: #000000;
@@ -1477,7 +1470,23 @@ body > input[type="radio"] {
   padding: 0 1px;
 }
 
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 10;
+}
+
+.overlay-show {
+  display: block;
+}
+
 .modal-content {
+  z-index: 20;
   position: fixed;
   top: 37%;
   left: 50%;
@@ -1491,9 +1500,26 @@ body > input[type="radio"] {
   box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
 }
 
+@keyframes drop {
+  0% {
+    transform: translateY(-1500px);
+  }
+
+  80% {
+    transform: translateY(150px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
 .modal-show {
   display: block;
+  animation-name: drop;
+  animation-duration: 0.8s;
 }
+
 
 .modal-content-close {
   position: absolute;
@@ -1569,6 +1595,10 @@ body > input[type="radio"] {
   width: 140px;
   margin-bottom: 10px;
   align-self: flex-end;
+}
+
+.map {
+  z-index: 1;
 }
 
 
